add jquery expander to header

--- a/views/header.jade
+++ b/views/header.jade
@@ -12,6 +12,7 @@ head
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
       script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
     script(src='/js/combined.min.js?v=version')
+    script(src='/bower_dependencies/jquery-expander/jquery.expander.js')
     script(src='/bower_dependencies/jquery-tokeninput/src/jquery.tokeninput.js')
 
     script.
