--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1689,6 +1689,7 @@ hr {
 }
 .floatright {
   float: right;
+    text-align: right;
 }
 .clearer {
   clear: both;
@@ -2448,7 +2449,7 @@ hr {
 .call-profile .meta.meta-schedule ul li {
   display: inline-block;
   padding: 0px 5px;
-  margin: 0px 1px 0px 0px;
+  margin: 0px 5px 5px 0px;
   line-height: 20px;
   background: rgba(75, 93, 94, 0.6);
   color: #ffffff;
