--- a/views/header.jade
+++ b/views/header.jade
@@ -4,7 +4,7 @@ head
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
 
-    //link(href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
+    link(href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
     link(href='/css/combined.min.css?v=version', rel='stylesheet')
     link(href='/bower_dependencies/jquery-tokeninput/styles/token-input-facebook.css', rel='stylesheet')
 
