Bug Fix #0000019 Bug Fix #0000021 Bug Fix #0000024 Bug Fix #0000020

--- a/views/dashboard/cards/UserEducationCard.jade
+++ b/views/dashboard/cards/UserEducationCard.jade
@@ -15,7 +15,7 @@
                     h5.col-xs-8 #{edu.school_name}
                     .header-link.col-xs-4
                         if isEditable
-                            a.btn.btn-link.editCardBtn(data-id=edu.id)
+                            a.btn.btn-link.editUserEducation(data-id=edu.id)
                                 i.icon-pencil
                             | &nbsp;
                             a.btn.btn-link.deleteUserEducation(data-id=edu.id)
