--- a/public/css/combined.css
+++ b/public/css/combined.css
@@ -7828,7 +7828,7 @@ hr {
 }
 .alert .actions-pane {
   background: rgba(0, 0, 0, 0.05);
-  padding: 10px 0px;
+  padding: 10px 0px 0px 0px;
   margin-top: 10px;
 }
 .alert-success {
@@ -9944,4 +9944,11 @@ hr {
 .meta.meta-price .small {
     line-height: 14px !important;
     font-size: 14px !important;
+}
+
+select.btn {
+    border: 1px solid #ccc;
+}
+.alert .actions-pane .row .btn {
+    margin-bottom: 10px;
 }
