--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1278,7 +1278,7 @@ hr {
 }
 .alert .actions-pane {
   background: rgba(0, 0, 0, 0.05);
-  padding: 10px 0px;
+  padding: 10px 0px 0px 0px;
   margin-top: 10px;
 }
 .alert-success {
