--- a/public/css/style.css
+++ b/public/css/style.css
@@ -193,3 +193,10 @@
     line-height: 14px !important;
     font-size: 14px !important;
 }
+
+select.btn {
+    border: 1px solid #ccc;
+}
+.alert .actions-pane .row .btn {
+    margin-bottom: 10px;
+}
