--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -2,6 +2,23 @@
 - var minDuration = pricing ? pricing.min_duration : 15;
 title ST-#{formatName(user.first_name, user.last_name, user.title)}
 include ../header
+style.
+    @media (max-width: 480px) {
+        .input-group-addon, .input-group-btn, .input-group .form-control {
+            display: block;
+            margin-bottom: 10px;
+            clear: both;
+        }
+
+        .input-group .form-control:first-child, .input-group-addon:first-child, .input-group-btn:first-child>.btn, .input-group-btn:first-child>.btn-group>.btn, .input-group-btn:first-child>.dropdown-toggle, .input-group-btn:last-child>.btn-group:not(:last-child)>.btn, .input-group-btn:last-child>.btn:not(:last-child):not(.dropdown-toggle),
+        .input-group .form-control:last-child, .input-group-addon:last-child, .input-group-btn:first-child>.btn-group:not(:first-child)>.btn, .input-group-btn:first-child>.btn:not(:first-child), .input-group-btn:last-child>.btn, .input-group-btn:last-child>.btn-group>.btn, .input-group-btn:last-child>.dropdown-toggle
+        {
+            border-radius: 4px;
+        }
+        .input-group {
+            display: block;
+        }
+    }
 div.modal.fade#scheduler
     .modal-dialog
         .modal-content
@@ -34,9 +51,9 @@ div.modal.fade#scheduler
                             p.floatright
                                 if pricing
                                     strong= formatMoney(pricing.charging_rate, pricing.unit)
-                                    if pricing.chunk_size > 1
+                                    if pricing.pulse_rate > 1
                                         | &nbsp;for&nbsp;
-                                        span= pricing.chunk_size
+                                        span= pricing.pulse_rate
                                         | &nbsp;mins.
                                     else
                                         | &nbsp;/ min.
@@ -165,9 +182,9 @@ div.modal.fade#scheduler
                                 p
                                     if pricing
                                         strong= formatMoney(pricing.charging_rate, pricing.unit)
-                                        if pricing.chunk_size > 1
+                                        if pricing.pulse_rate > 1
                                             | &nbsp;for&nbsp;
-                                            span= pricing.chunk_size
+                                            span= pricing.pulse_rate
                                             | &nbsp;mins.
                                         else
                                             | &nbsp;/ min.
@@ -232,14 +249,15 @@ div.modal.fade#scheduler
                                         i.icon-phone
                                         | Recepient Phone
                                     .form-group
-                                        .row
-                                            .col-xs-4
-                                                select.form-control#country-code
+                                        .input-group
+                                            .input-group-btn
+                                                select.btn(style="width: 150px", name="area_code")
                                                     for name,abb in CountryName
                                                         -var code = CountryCode[abb];
                                                         option(value=code, selected=code ==country_code)= name + ' (+' + code + ')'
-                                            .col-xs-8
-                                                input.form-control.phone-number#caller-phone(type='text', placeholder='Phone Number', value=caller_phone)
+                                            .input-group-btn
+                                                input.form-control(style="width: 150px", type='text', placeholder='Area Code', value=caller_phone, name="area_code")
+                                            input.form-control.phone-number#caller-phone(type='text', placeholder='Phone Number', value=caller_phone, name="phone")
                                 .row.input-row
                                     h1
                                         i.icon-list
