--- a/views/dashboard/userSettingSchedule.jade
+++ b/views/dashboard/userSettingSchedule.jade
@@ -116,32 +116,30 @@ title SNT-#{formatName(loggedInUser.first_name, loggedInUser.last_name)} | Setti
                                 .header-row.row
                                     h5 Pricing
                                 .clearer
-                            .item
+                            .item-edit
                                 form#pricingSchemeForm
                                     input(type='hidden', name='id', value=scheme.id)
                                     .alert.alert-danger(style="display: none;")
-                                    .row
-                                        h3 Pulse Rate
-                                        .form-group
-                                            select.form-control(name='chunk_size')
-                                                option(value='1', selected=scheme.chunk_size == 1) 1 min.
-                                                option(value='15', selected=scheme.chunk_size == 15) 15 mins.
-                                                option(value='30', selected=scheme.chunk_size == 30) 30 mins.
-                                                option(value='45', selected=scheme.chunk_size == 45) 45 mins.
-                                                option(value='60', selected=scheme.chunk_size == 60) 60 mins.
-                                        h3 Amount
-                                        .form-group
-                                            .row
-                                                .col-xs-10
-                                                    input(type='text', value=scheme.charging_rate, name='charging_rate').form-control
-                                                .col-xs-2
-                                                    select.form-control(name='unit')
-                                                        option(value='1', selected=scheme.unit == 1) Rs.
-                                                        option(value='2', selected=scheme.unit == 2) $
-                                                        option(value='3', selected=scheme.unit == 3) Points
-                                        h3 Minimum duration (mins.)
-                                        .form-group
-                                            input(type='text', placeholder='0', value=scheme.min_duration, name='min_duration').form-control
+                                    h3 Pulse Rate
+                                    .form-group
+                                        select.form-control(name='pulse_rate')
+                                            option(value='1', selected=scheme.pulse_rate == 1) 1 min.
+                                            option(value='15', selected=scheme.pulse_rate == 15) 15 mins.
+                                            option(value='30', selected=scheme.pulse_rate == 30) 30 mins.
+                                            option(value='45', selected=scheme.pulse_rate == 45) 45 mins.
+                                            option(value='60', selected=scheme.pulse_rate == 60) 60 mins.
+                                    h3 Amount
+                                    .form-group
+                                        .input-group
+                                            input(type='text', value=scheme.charging_rate, name='charging_rate').form-control
+                                            span.input-group-btn
+                                                select.btn(name='unit')
+                                                    option(value='1', selected=scheme.unit == 1) Rs.
+                                                    option(value='2', selected=scheme.unit == 2) $
+                                                    option(value='3', selected=scheme.unit == 3) Points
+                                    h3 Minimum duration (mins.)
+                                    .form-group
+                                        input(type='text', placeholder='0', value=scheme.min_duration, name='min_duration').form-control
                                     .links-edit
                                         p.edit-schedules
                                             em Coming soon: Skill based pricing
