--- a/public/css/combined.css
+++ b/public/css/combined.css
@@ -5786,6 +5786,7 @@ button.close {
 
 /**
  * BootstrapValidator (http://bootstrapvalidator.com)
+ *
  * The best jQuery plugin to validate form fields. Designed to use with Bootstrap 3
  *
  * @author      http://twitter.com/nghuuphuoc
@@ -5795,9 +5796,6 @@ button.close {
 
 .bv-form .help-block {
     margin-bottom: 0;
-}
-.bv-form .tooltip-inner {
-    text-align: left;
 }
 .nav-tabs li.bv-tab-success > a {
     color: #3c763d;
@@ -10075,4 +10073,21 @@ select.btn {
 }
 .alert .actions-pane .row .btn {
     margin-bottom: 10px;
+}
+
+@media (max-width: 480px) {
+    .input-group-addon, .input-group-btn, .input-group .form-control {
+        display: block;
+        margin-bottom: 10px;
+        clear: both;
+    }
+
+    .input-group .form-control:first-child, .input-group-addon:first-child, .input-group-btn:first-child>.btn, .input-group-btn:first-child>.btn-group>.btn, .input-group-btn:first-child>.dropdown-toggle, .input-group-btn:last-child>.btn-group:not(:last-child)>.btn, .input-group-btn:last-child>.btn:not(:last-child):not(.dropdown-toggle),
+    .input-group .form-control:last-child, .input-group-addon:last-child, .input-group-btn:first-child>.btn-group:not(:first-child)>.btn, .input-group-btn:first-child>.btn:not(:first-child), .input-group-btn:last-child>.btn, .input-group-btn:last-child>.btn-group>.btn, .input-group-btn:last-child>.dropdown-toggle
+    {
+        border-radius: 4px;
+    }
+    .input-group {
+        display: block;
+    }
 }
