--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,3 +200,20 @@ select.btn {
 .alert .actions-pane .row .btn {
     margin-bottom: 10px;
 }
+
+@media (max-width: 480px) {
+    .input-group-addon, .input-group-btn, .input-group .form-control {
+        display: block;
+        margin-bottom: 10px;
+        clear: both;
+    }
+
+    .input-group .form-control:first-child, .input-group-addon:first-child, .input-group-btn:first-child>.btn, .input-group-btn:first-child>.btn-group>.btn, .input-group-btn:first-child>.dropdown-toggle, .input-group-btn:last-child>.btn-group:not(:last-child)>.btn, .input-group-btn:last-child>.btn:not(:last-child):not(.dropdown-toggle),
+    .input-group .form-control:last-child, .input-group-addon:last-child, .input-group-btn:first-child>.btn-group:not(:first-child)>.btn, .input-group-btn:first-child>.btn:not(:first-child), .input-group-btn:last-child>.btn, .input-group-btn:last-child>.btn-group>.btn, .input-group-btn:last-child>.dropdown-toggle
+    {
+        border-radius: 4px;
+    }
+    .input-group {
+        display: block;
+    }
+}
