--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -154,12 +154,13 @@ div.modal.fade#scheduler
                                 .hidden-xs.profile
                                     p
                                         | #{userProfile.short_desc}
-                            if userSkill
-                                .hidden-xs.meta.meta-keywords
-                                    h5 Skills/Keyword
-                                    ul
-                                        for skill in userSkill
-                                            li= skill.skill_name
+                            if user.skill
+                                if user.skill.length != 0
+                                    .hidden-xs.meta.meta-keywords
+                                        h5 Skills/Keyword
+                                        ul
+                                            each skill in user.skill
+                                                li= skill.skill.skill
                             .meta.meta-price
                                 h5 Charges
                                 p
