--- a/views/callFlow/index.jade
+++ b/views/callFlow/index.jade
@@ -247,7 +247,7 @@ div.modal.fade#scheduler
                                         i.icon-list
                                         | Call Agenda
                                     .form-group
-                                        textarea.form-control#agenda(type='text', placeholder='Enter an agenda for your call (optional)')= agenda
+                                        textarea.form-control(name='agenda', type='text', placeholder='Enter an agenda for your call (optional)')= agenda
                             .call-actions
                                 a.btn.btn-lg.btn-primary.first#schedule Proceed
             // /.content
