--- a/views/dashboard/home.jade
+++ b/views/dashboard/home.jade
@@ -4,13 +4,37 @@ head
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
 
-    link(href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
-    link(href='/css/combined.min.css?v=version', rel='stylesheet')
+    //-<!-- build:js /js/scripts.min.js -->
+    script(src='/bower_dependencies/jquery/jquery.js', type='text/javascript')
+    script(src='/bower_dependencies/bootstrap/dist/js/bootstrap.js', type='text/javascript')
+    script(src='/bower_dependencies/jquery-expander/jquery.expander.js', type='text/javascript')
+    script(src='/bower_dependencies/bootstrapValidator/dist/js/bootstrapValidator.js', type='text/javascript')
+    script(src='/bower_dependencies/bootbox/bootbox.js', type='text/javascript')
+    script(src='/bower_dependencies/underscore/underscore.js', type='text/javascript')
+    script(src='/bower_dependencies/moment/moment.js', type='text/javascript')
+    script(src='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js', type='text/javascript')
+    script(src='/bower_dependencies/jquery-tokeninput/src/jquery.tokeninput.js', type='text/javascript')
+    script(src='/js/app/common.js', type='text/javascript')
+    script(src='/js/lib/bloodhound.js', type='text/javascript')
+    script(src='/js/app/jquery.card.js', type='text/javascript')
+    //-<!-- endbuild -->
 
     //if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
       script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
-    script(src='/js/combined.min.js?v=version')
+    link(href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
+
+    //-<!-- build:css test/compiled/style.min.css -->
+    link(href='/bower_dependencies/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
+    link(href='/bower_dependencies/bootstrapValidator/dist/css/bootstrapValidator.css', rel='stylesheet')
+    link(href='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css', rel='stylesheet')
+    link(href='/bower_dependencies/jquery-tokeninput/styles/token-input-facebook.css', rel='stylesheet')
+    link(href='/bower_dependencies/76d-social-icons/assets/css/social-icons.css', rel='stylesheet')
+    link(href='/bower_dependencies/jquery-tokeninput/styles/token-input-facebook.css', rel='stylesheet')
+    link(href='/bower_dependencies/76d-social-icons/assets/css/main.css', rel='stylesheet')
+    link(href='/css/main.css', rel='stylesheet')
+    link(href='/css/style.css', rel='stylesheet')
+    //-<!-- endbuild -->
 
     script.
         (function( $ ){
@@ -70,8 +94,9 @@ title SearchNTalk
                             option(value='en', selected='')
                                 | English
 // /.masthead
-//.hero
+.hero
     .container
+        img.retina-image(src='/images/hero_main.png')
 // /.hero
 .highlights
     .container
@@ -81,7 +106,8 @@ title SearchNTalk
                     h1
                         em For&nbsp;
                         | Subject Matter Experts
-                //.image
+                .image
+                    img.retina-image(src='/images/hero_experts.png')
                 .description
                     h2 Have or want to create an online presence?
                     p Register on searchntalk.com to instantly start offering advice for a fee!
@@ -90,7 +116,8 @@ title SearchNTalk
                     h1
                         em For&nbsp;
                         | Networks of Experts
-                //.image
+                .image
+                    img.retina-image(src='/images/hero_networks.png')
                 .description
                     h2 Have access to several experts on a subject?
                     p
@@ -100,7 +127,8 @@ title SearchNTalk
                     h1
                         em For&nbsp;
                         | Content Websites
-                //.image
+                .image
+                    img.retina-image(src='/images/hero_content.png')
                 .description
                     h2 Own a content website?
                     p
@@ -112,7 +140,7 @@ title SearchNTalk
         .row.feature
             .col-sm-3
                 .image
-                    img.retina-image(src='images/icon_scheduling.png')
+                    img.retina-image(src='/images/icon_scheduling.png')
             .col-sm-9
                 .description
                     h1 Easy & Fast Scheduling
@@ -122,7 +150,7 @@ title SearchNTalk
         .row.feature
             .col-sm-3
                 .image
-                    img.retina-image(src='images/icon_pricing.png')
+                    img.retina-image(src='/images/icon_pricing.png')
             .col-sm-9
                 .description
                     h1 Your Expertise, Your Price
@@ -132,7 +160,7 @@ title SearchNTalk
         .row.feature
             .col-sm-3
                 .image
-                    img.retina-image(src='images/icon_privacy.png')
+                    img.retina-image(src='/images/icon_privacy.png')
             .col-sm-9
                 .description
                     h1 No Compromise on Privacy
@@ -142,7 +170,7 @@ title SearchNTalk
         .row.feature
             .col-sm-3
                 .image
-                    img.retina-image(src='images/icon_widget.png')
+                    img.retina-image(src='/images/icon_widget.png')
             .col-md-9
                 .description
                     h1 Flexible Widgets
