--- a/views/dashboard/widgetCreator.jade
+++ b/views/dashboard/widgetCreator.jade
@@ -34,7 +34,7 @@ title Widget Creator
                             .item
                                 .row
                                     h3 1. Include this code once on your page (ideally just after opening <body> tag)
-                                    p.code &lt;script src=&quot;//searchntalk.com/js/embed.js&quot; type=&quot;text/javascript&quot;/&gt;
+                                    p.code &lt;script src=&quot;//searchntalk.com/js/embed.js&quot; type=&quot;text/javascript&quot;&gt;&lt;/script&gt;
                             .item
                                 .row
                                     h3 2. Place this code wherever you want to display the expert widget
